--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "training",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "node": "^20.5.1"
-  }
+  },
+  "description": ""
 }
